fix: spacing and padding on top create-tweet buttons in redsquare

--- a/web/saito/css-imports/saito-header.css
+++ b/web/saito/css-imports/saito-header.css
@@ -213,5 +213,8 @@
         bottom: 0.15rem;
         margin-left: 2rem;
     }
+    .saito-header-logo {
+        max-width: 12rem;
+    }
 }
 
